# modal-deployments

./: .cursorrules  .gitignore  Modelfile  README.md  create_repository.sh  deploy_finetuned_model.sh  pyproject.toml  requirements.txt  run_setup.sh  vscode_integration.py
.github/workflows/: deploy.yml  test.yml
config/: training_config.yaml
deployments/: nougat_ocr_function.py  ollama_api.py  ollama_raw.py
docs/: CONCEPTS.md
examples/: simple_example.py
scripts/: advanced_techniques.py  devstral_modal_deployment.py  ollama_finetune_system.py  ollama_finetuning.py  ollama_integration.py
setup/: Modelfile  README.md  check_requirements.py  dataset_preparation.py  quick_start.py  requirements.txt
