[project]
name = "modal-deployments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "ipython>=8.31.0",
    "loguru>=0.7.3",
    "modal>=0.68.29",
    "openai>=1.58.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]
